--- a/libs/common/src/lib/resources/upload-button/upload-button.component.html
+++ b/libs/common/src/lib/resources/upload-button/upload-button.component.html
@@ -27,4 +27,10 @@
     (selectOption)="upload('csv')">
     {{ 'upload.upload_from_csv' | translate }}
   </pa-option>
+  <pa-option
+    *ngIf="isQnAEnabled | async"
+    icon="chat"
+    (selectOption)="upload('qna')">
+    {{ 'upload.q_and_a' | translate }}
+  </pa-option>
 </pa-dropdown>
