Fix conversation style + support <br>

--- a/libs/search-widget/src/common/_global.scss
+++ b/libs/search-widget/src/common/_global.scss
@@ -119,3 +119,9 @@ ul.sw-dropdown-options {
   font-weight: var(--font-weight-body);
   line-height: var(--line-height-body);
 }
+
+.body-xs {
+  font-size: var(--font-size-xsmall);
+  font-weight: var(--font-weight-body);
+  line-height: var(--line-height-body-xs);
+}
