--- a/libs/search-widget/src/common/common-style.scss
+++ b/libs/search-widget/src/common/common-style.scss
@@ -79,6 +79,7 @@
   --font-size-title-m: var(--font-size-base);
   --font-size-title-s: var(--font-size-medium);
   --font-weight-title-m: var(--font-weight-semi-bold);
+  --line-height-body-xs: var(--font-size-base);
   --line-height-body-s: calc(var(--font-size-base) * 1.125);
   --line-height-body: calc(var(--font-size-base) * 1.25);
   --line-height-title-m-mobile: calc(var(--font-size-base) * 1.625);
