--- a/libs/search-widget/src/common/_global.scss
+++ b/libs/search-widget/src/common/_global.scss
@@ -90,6 +90,31 @@ ul.sw-dropdown-options {
   }
 }
 
+.sw-text-viewer {
+  background: var(--color-light-stronger);
+  margin: 0 auto;
+  max-width: 800px;
+  padding: var(--rhythm-3) var(--rhythm-4);
+}
+
+.sw-conversation-viewer .html-content {
+  p {
+    margin-top: 0;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
+  h1:first-child,
+  h2:first-child,
+  h3:first-child,
+  h4:first-child,
+  h5:first-child,
+  h6:first-child {
+    margin-top: 0;
+  }
+}
+
 .title-m {
   font-size: var(--font-size-title-m);
   font-weight: var(--font-weight-title-m);
