--- a/apps/dashboard/src/app/account/account-home/account-home.component.html
+++ b/apps/dashboard/src/app/account/account-home/account-home.component.html
@@ -1,6 +1,13 @@
 <div class="account-home">
   <div class="container-row">
-    <div class="processing-stats">
+    <div
+      class="processing-stats"
+      *ngIf="isSubscribed | async">
+      <app-usage-table [usage]="usage | async"></app-usage-table>
+    </div>
+    <div
+      class="processing-stats"
+      *ngIf="!(isSubscribed | async)">
       <div class="consumption-header">
         <div>
           <h2>{{ 'account.monthly_consumibles' | translate }}</h2>
