[sc-5620] Generative answer box improvements
- Smaller and lighter box-shadow
- No more "Answer" title

--- a/libs/search-widget/src/components/answer/InitialAnswer.scss
+++ b/libs/search-widget/src/components/answer/InitialAnswer.scss
@@ -1,6 +1,6 @@
 .sw-initial-answer {
   border-radius: var(--rhythm-2);
-  box-shadow: 0 0 var(--rhythm-2_5) var(--color-neutral-light);
+  box-shadow: 0 0 var(--rhythm-2) var(--color-neutral-lighter);
   margin: var(--rhythm-1) 0;
   padding: var(--rhythm-2) var(--rhythm-3);
   position: relative;
