[sc-5455] better empty kb management
- Display empty kb warning only when the kb never had data
- Display dataset selector on resource list only when KB never had data.

--- a/libs/common/src/lib/resources/resource-list/resource-list.component.html
+++ b/libs/common/src/lib/resources/resource-list/resource-list.component.html
@@ -150,8 +150,10 @@
       <p>
         <strong>{{ 'resource.empty' | translate }}</strong>
       </p>
-      <p>{{ 'resource.empty.import' | translate }}</p>
-      <stf-dataset-selector (imported)="onDatasetImport($event)"></stf-dataset-selector>
+      <ng-container *ngIf="neverGotData | async">
+        <p>{{ 'resource.empty.import' | translate }}</p>
+        <stf-dataset-selector (imported)="onDatasetImport($event)"></stf-dataset-selector>
+      </ng-container>
     </div>
   </div>
 </div>
