[sc-5511] Display partial results warning on 206

--- a/libs/search-widget/src/widgets/search-widget/SearchResults.scss
+++ b/libs/search-widget/src/widgets/search-widget/SearchResults.scss
@@ -3,6 +3,9 @@
 .error {
   width: var(--search-bar-max-width);
 }
+.partial-results-warning {
+  margin-bottom: var(--rhythm-3);
+}
 
 .results-container {
   display: flex;
