--- a/libs/common/src/lib/widgets/widget-generator.component.scss
+++ b/libs/common/src/lib/widgets/widget-generator.component.scss
@@ -68,6 +68,9 @@ $width-configuration: rhythm(56);
         flex-direction: column;
         gap: rhythm(2);
       }
+      .filter-type {
+        margin-left: rhythm(8);
+      }
     }
 
     section.snippet {
