--- a/libs/common/src/lib/upload/upload-files/upload-files.component.html
+++ b/libs/common/src/lib/upload/upload-files/upload-files.component.html
@@ -99,7 +99,7 @@
       <p>
         Note: the authorization token here will expired. If you want a long-term approach, you should use a service
         access token and put it in the
-        <code>X-STF-Serviceaccount</code>
+        <code>X-NUCLIA-SERVICEACCOUNT</code>
         header.
       </p>
     </ncom-hint>
