--- a/libs/common/src/lib/upload/upload-qna/upload-qna.component.html
+++ b/libs/common/src/lib/upload/upload-qna/upload-qna.component.html
@@ -18,8 +18,16 @@
       <pa-input [formControl]="resourceTitle">Resource title</pa-input>
 
       <pa-select
-        [formControl]="qnaFormat"
-        [label]="'upload.qna_format' | translate">
+        [formControl]="questionFormat"
+        [label]="'upload.question_format' | translate">
+        <pa-option value="PLAIN">PLAIN</pa-option>
+        <pa-option value="MARKDOWN">MARKDOWN</pa-option>
+        <pa-option value="HTML">HTML</pa-option>
+        <pa-option value="RST">RST</pa-option>
+      </pa-select>
+      <pa-select
+        [formControl]="answerFormat"
+        [label]="'upload.answer_format' | translate">
         <pa-option value="PLAIN">PLAIN</pa-option>
         <pa-option value="MARKDOWN">MARKDOWN</pa-option>
         <pa-option value="HTML">HTML</pa-option>
