--- a/libs/common/src/lib/user/onboarding/onboarding.component.scss
+++ b/libs/common/src/lib/user/onboarding/onboarding.component.scss
@@ -4,7 +4,8 @@
   background: $color-light-stronger;
   display: flex;
   flex-direction: column;
-  gap: rhythm(5);
+  gap: rhythm(2);
+  margin-top: calc(#{rhythm(4) * -1});
   width: rhythm(50);
   z-index: 1;
 
