Add dedicated_processors_state field in Manager

--- a/apps/manager-v2/src/app/manage-accounts/account-details/account-details.component.html
+++ b/apps/manager-v2/src/app/manage-accounts/account-details/account-details.component.html
@@ -29,11 +29,15 @@
       </div>
       <div *ngIf="(account | async)?.type === 'stash-trial' && !!(account | async)?.trial_expiration_date">
         Trial expiration date:
-        <strong>{{ (account | async)?.trial_expiration_date | date: 'yyyy-MM-dd' }}</strong>
+        <strong>{{ (account | async)?.trial_expiration_date | date : 'yyyy-MM-dd' }}</strong>
       </div>
       <div>
         Max kbs:
         <strong>{{ (account | async)?.stashes?.max_stashes }}</strong>
+      </div>
+      <div>
+        Dedicated processors state:
+        <strong>{{ (account | async)?.dedicated_processors_state }}</strong>
       </div>
     </div>
     <nav>
