--- a/apps/manager-v2/src/app/manage-accounts/account-details/configuration/configuration.component.html
+++ b/apps/manager-v2/src/app/manage-accounts/account-details/configuration/configuration.component.html
@@ -45,6 +45,14 @@
     Max dedicated processors
   </pa-input>
 
+  <pa-select
+    label="Dedicated processors state"
+    formControlName="dedicated_processors_state">
+    <pa-option value="enabled">Enabled</pa-option>
+    <pa-option value="disabled">Disabled</pa-option>
+    <pa-option value="paused">Paused</pa-option>
+  </pa-select>
+
   <div>
     <label
       class="title-xxs"
