--- a/libs/common/src/lib/resources/sample-dataset/dataset-import.component.html
+++ b/libs/common/src/lib/resources/sample-dataset/dataset-import.component.html
@@ -1,14 +1,17 @@
 <div class="dataset-import-container">
   <h1>{{ 'onboarding.dataset.title' | translate }}</h1>
-  <h2>{{ 'onboarding.dataset.option1' | translate }}</h2>
-  <p class="body-m">
-    {{ 'onboarding.dataset.option1.description' | translate }}
-  </p>
 
-  <stf-dataset-selector (imported)="onDatasetImported($event)"></stf-dataset-selector>
+  <ng-container *ngIf="(isMonoLingual | async) === false">
+    <h2>{{ 'onboarding.dataset.option1' | translate }}</h2>
+    <p class="body-m">
+      {{ 'onboarding.dataset.option1.description' | translate }}
+    </p>
+
+    <stf-dataset-selector (imported)="onDatasetImported($event)"></stf-dataset-selector>
+  </ng-container>
 
   <div class="upload-data">
-    <h2>{{ 'onboarding.dataset.option2' | translate }}</h2>
+    <h2 *ngIf="(isMonoLingual | async) === false">{{ 'onboarding.dataset.option2' | translate }}</h2>
     <p
       class="body-m"
       #uploadLinksContainer>
