[sc-5893] Filter by entities (#830)
* Allow to select filter types

* Split Label component like Sistema

* Allow to filter by entities in the widget

* Allow to filter without query

* rgb function is very large

* Fix

* Add feature flag

* Replace select by checkboxes

* Fixes

* Fixes

--- a/libs/common/src/lib/widgets/widget-generator.component.html
+++ b/libs/common/src/lib/widgets/widget-generator.component.html
@@ -63,6 +63,22 @@
             formControlName="filter">
             {{ 'stash.widgets.filter' | translate }}
           </pa-toggle>
+          <div
+            *ngIf="mainFormFeatures.filter && isEntityFiltersEnabled | async"
+            class="filter-type">
+            <pa-checkbox
+              [(value)]="filters.labels"
+              (valueChange)="onFiltersChange()"
+              [disabled]="filters.labels && hasOneFilter">
+              {{ 'stash.widgets.labels' | translate }}
+            </pa-checkbox>
+            <pa-checkbox
+              [(value)]="filters.entities"
+              (valueChange)="onFiltersChange()"
+              [disabled]="filters.entities && hasOneFilter">
+              {{ 'stash.widgets.entities' | translate }}
+            </pa-checkbox>
+          </div>
           <pa-toggle
             *ngIf="areAnswersEnabled | async"
             labelOnRight
