pdf annotation (using Pawls)

--- a/libs/common/src/lib/label/label-sets/label-set/label-set.component.html
+++ b/libs/common/src/lib/label/label-sets/label-set/label-set.component.html
@@ -40,7 +40,7 @@
           <div>
             <pa-radio-group formControlName="kind">
               <pa-radio
-                *ngFor="let kind of kinds"
+                *ngFor="let kind of kinds | async"
                 [value]="kind.id"
                 [disabled]="!addNew">
                 {{ kind.name | translate }}
